// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> Form Container -- Snapshot Test Matches the snapshot when no elements passed to the Form 1`] = `
<form
  action=""
  autoComplete="off"
  className="form"
/>
`;

exports[`>>> Form Container -- Snapshot Test Matches the snapshot when some data is passed to the Form 1`] = `
<form
  action=""
  autoComplete="off"
  className="form"
>
  <div>
    <input
      id="email"
      type="text"
    />
  </div>
</form>
`;
